# tictactoe

./: .gitignore  CMakeLists.txt
include/: Board.hpp  GraphicalInterface.hpp  GraphicalPreferencesHoler.hpp  MouseClickObserver.hpp  Symbol.hpp  TicTacToe.hpp
src/: Board.cpp  GraphicalInterface.cpp  GraphicalPreferencesHolder.cpp  MouseClickObserver.cpp  TicTacToe.cpp  main.cpp
